Oct 12, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- cleaned up get_custom_arguments
- custom_arg_count no longer neccessary
- suggest function for game commands
- show only configured games by default

Oct 11, 2002: Alex Burger <alex@fragit_dot_net>
- Modified q3_exec to call find_game_dir using quake3_data_dir
- Added NULL checks to find_game_dir

Oct 11, 2002: Alex Burger <alex@fragit_dot_net>
- Added function get_custom_arguments.  Used by ut_exec to pass user
  defined command line arguments to UT when launching.  Currently does 
  not have a GUI front end. To use, add something like the following
  to the [Game: UN] section in ~/.qf/config:

  custom_arg0=TacticalOps, -ini=TacticalOps.ini
  custom_arg1=SFTeamDM, -ini=StrikeForce.ini -userini=SFUser.ini
  custom_arg_count=2

  For UT, the 'gametype' server variable is compared with the entries
  in the config file above.  If there is a match, the arguments are 
  appended.

  For UT, the argument is appended to the IP address so you could 
  specify additional options such as ?Name=Alex etc.  If you want to
  pass - options, make sure you put a space after the comma like above.  

- Added function find_game_dir which searches for the game dir regardless
  of case.  Called by qw_exec, q2_exec_generic, q3_exec and hl_exec to set
  the game, or fs_game argument.  For example, if server has a game of 
  'OSP', and client has dir of 'osp', Q3 will now be properly be launched
  with +fs_game osp instead of OSP.

Oct 10, 2002: Alex Burger <alex@fragit_dot_net>
- Added support of 'Show only configured games' to Add Master window
  Add Server window and Statistics page
- Cleaned up 'When launching a game' placement in Preferences / General

Oct 10, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- update NEWS and TODO
- added script 'vc' to automate editing this file
- remove instructions for Half-Life hack from docu
- access functions for game specific attributes

Oct 09, 2002: Alex Burger <alex@fragit_dot_net>